--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 
     <ul>
         <li>Qual o seu nome?</li>
-        <p>Resp.: </p>
+        <p>Resp.: Prof. Renato </p>
         <li>Conhecimento e experiência na área?</li>
-        <p>Resp.:</p>
+        <p>Resp.: SIM</p>
         <li>Atua como profissional de TI?</li>
-        <p>Resp.: </p>
-        <li>Qual o seu objetivo neste curso?</li>
-        <p>Resp.: </p>
+        <p>Resp.: SIM</p>
     </ul>
